# llm-quickly

./: .env.example  .gitignore  Makefile  README.md  TODO.md  main.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: deploy.yml
app/: __init__.py
app/api/: routes.py
app/core/: config.py  model.py
app/schemas/: requests.py
tests/: conftest.py  test_model.py  test_routes.py
utility/: README.md  cli.py  gcs_operations.py  setup_env.sh  upload_tinyllama.py  upload_to_gcs.sh
utility/scripts/: download_model.sh  setup_env.sh
utility/scripts/load/: load_test.py  locustfile.py
utility/setup/: model.py  setup_gcloud_sdk.py
