[tool.poetry]
name = "llm-quickly"
version = "0.1.0"
description = "A cookie cutter for inferencing LLMs using FastAPI."
authors = ["Rich Clarke <rich@rich-clarke.dev>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pybind11 = ">=2.12.0"
numpy = ">=1.24.3"
torch = ">=2.0.0, <2.1.0"
transformers = ">=4.31.0"
google-cloud-storage = ">=2.10.0"
fastapi = ">=0.100.0"
uvicorn = ">=0.23.0"
python-dotenv = ">=1.0.0"
pydantic = ">=2.4.0"
pydantic-settings = ">=2.0.0"
huggingface-hub = ">=0.19.4"
accelerate = ">=0.24.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.1"
pytest-cov = ">=4.1.0"
httpx = ">=0.24.1"
black = ">=23.7.0"
flake8 = ">=6.1.0"
isort = ">=5.12.0"
mypy = ">=1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=app --cov-report=term-missing"
asyncio_mode = "auto" 